@@ -26,19 +26,26 @@ licenses += ("Apache-2.0", url("http://www.apache.org/licenses/LICENSE-2.0"))
 
 // these do not impact code generation in spark
 javacOptions ++= Seq("-source", "17", "-target", "17")
-scalacOptions ++= Seq("-encoding", "UTF-8", "-release", "11")
+scalacOptions ++= Seq("-encoding", "UTF-8", "-release", "17")
 Test / javacOptions ++= Seq("-source", "17", "-target", "17")
-Test / scalacOptions ++= Seq("-encoding", "UTF-8", "-release", "11")
+Test / scalacOptions ++= Seq("-encoding", "UTF-8", "-release", "17")
 
 libraryDependencies ++= Seq(
   "org.scala-lang" % "scala-library" % "2.12.6",
-  "org.apache.spark" %% "spark-sql" % "3.4.4" % "provided",
-  "org.apache.datasketches" % "datasketches-java" % "6.1.1" % "compile",
+  "org.apache.spark" %% "spark-sql" % "3.5.4" % "provided",
+  "org.apache.datasketches" % "datasketches-java" % "7.0.0" % "compile",
   "org.scalatest" %% "scalatest" % "3.2.19" % "test",
   "org.scalatestplus" %% "junit-4-13" % "3.2.19.0" % "test"
 )
 
 Test / testOptions += Tests.Argument(TestFrameworks.ScalaTest, "-oD")
+
+// for java 17
+Test / fork := true
+Test / javaOptions ++= Seq(
+  "--add-modules=jdk.incubator.foreign",
+  "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED"
+)
 
 scalacOptions ++= Seq(
   "-deprecation",
